# dinovol_2

./: pyproject.toml
dinovol_2/: example_config.json  pretrain.py
dinovol_2/augmentation/pipelines/: training_transforms.py
dinovol_2/dataset/: ssl_zarr_dataset.py
dinovol_2/model/: dinov2_eva.py  model.py  patch_encode_decode.py  rope.py
